Bug 406923 - flatpak refs does not give much info
Summary: flatpak refs does not give much info
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-26 15:08 UTC by Jonathan Riddell
Modified: 2019-04-29 15:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2019-04-26 15:08:43 UTC
Loading a flatpakref into Discover it's pretty bare.  I would expect it to work out the same thing app id is already in flatpak and just show me the same package from the flatpak source with all the same metadata.
Comment 1 Aleix Pol 2019-04-29 15:39:01 UTC
Git commit 1ebbfca3e10df37bd8f4cc409dcc0434ace809c5 by Aleix Pol.
Committed on 29/04/2019 at 15:38.
Pushed by apol into branch 'Plasma/5.15'.

flatpak: make sure we don't consider appstream fetched too early

M  +5    -2    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://commits.kde.org/discover/1ebbfca3e10df37bd8f4cc409dcc0434ace809c5