flatpak: make sure we don't consider appstream fetched too early

BUG: 406923